opam-version: "2.0"

synopsis: "Internal: shared http/af stack for Dream (server) and Hyper (client)"
description: "This package does not have a stable API."

license: "MIT"
homepage: "https://github.com/aantron/dream"
doc: "https://aantron.github.io/dream"
bug-reports: "https://github.com/aantron/dream/issues"
dev-repo: "git+https://github.com/aantron/dream.git"

author: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "dream-pure"
  "dune" {>= "2.7.0"}  # --instrument-with.
  "gluten"
  "gluten-lwt-unix"
  "h2" {< "0.13.0"}
  "h2-lwt-unix"
  "httpun" {< "0.2.0"}
  "httpun-lwt-unix"
  "httpun-ws"
  "lwt"
  "lwt_ppx" {>= "1.2.2"}
  "lwt_ssl"
  "ocaml" {>= "4.08.0"}
  "ssl" {>= "0.5.8"}  # Ssl.get_negotiated_alpn_protocol.
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
