opam-version: "2.0"

synopsis: "Internal: shared HTTP types for Dream (server) and Hyper (client)"
description: "This package does not have a stable API."

license: "MIT"
homepage: "https://github.com/aantron/dream"
doc: "https://aantron.github.io/dream"
bug-reports: "https://github.com/aantron/dream/issues"
dev-repo: "git+https://github.com/aantron/dream.git"

author: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "base64" {>= "3.1.0"}  # Base64.encode_string.
  "bigstringaf" {>= "0.5.0"}  # Bigstringaf.to_string.
  "dune" {>= "2.7.0"}  # --instrument-with.
  "eio"
  "hmap"
  "ocaml" {>= "4.08.0"}
  "ptime" {>= "0.8.1"}  # Ptime.weekday.
  "uri" {>= "4.2.0"}

  # Testing, development.
  "alcotest" {with-test}
  "bisect_ppx" {with-test & >= "2.5.0"}  # --instrument-with.
  "ppx_expect" {with-test}
  "ppx_yojson_conv" {with-test}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
