opam-version: "2.0"

synopsis: "Web framework, concise yet feature-complete"

license: "MIT"
homepage: "https://github.com/aantron/dream"
author: "Anton Bachin <antonbachin@yahoo.com>"

bug-reports: "https://github.com/aantron/dream/issues"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

dev-repo: "git+https://github.com/aantron/dream.git"

build: [
  ["dune" "build" "-p"
   "dream,gluten,gluten-lwt,gluten-lwt-unix,websocketaf,httpaf,httpaf-lwt,httpaf-lwt-unix,hpack,h2,h2-lwt,h2-lwt-unix"
   "-j" jobs]
]

# TODO Test dependency cone, i.e. list dependencies actually installed and make
# sure nothing questionable silently creeps in.

depends: [
  "base-unix"
  "base64" {>= "3.1.0"}  # Base64.encode_string.
  "bigarray-compat"
  "caqti-lwt"
  "conf-libev"  # TODO LATER Get rid of this system dep.
  "cstruct"
  "dune" {>= "2.7.0"}  # --instrument-with.
  "fmt" {>= "0.8.7"}  # `Italic. This constrains Dream to OCaml >= 4.05.
  "graphql_parser"
  "graphql-lwt"  # Should be factored out; Menhir as recursive dependency.
  "hmap"
  "jwto" {>= "0.2.2"}  # Jwto.get_payload. TODO LATER Probably system deps.
  "lwt"
  "lwt_ssl"
  "logs" {>= "0.5.0"}
  "magic-mime"
  "mirage-crypto" {>= "0.8.1"}  # AES-256-GCM.
  "mirage-crypto-rng" {>= "0.8.0"}  # Signature of initialize.
  "multipart-form-data" {>= "0.3.0"}
  "ocaml" {>= "4.05.0"}  # String.split_on_char, String.index_from_opt.
  "uri"
  "yojson"  # ...

  # Currently vendored.
  # "gluten"
  # "gluten-lwt-unix"
  # "httpaf"
  # "httpaf-lwt-unix"

  # Dependencies of vendored packages.
  "angstrom" {>= "0.14.0"}
  "bigstringaf" {>= "0.4.0"}
  "digestif" {>= "0.7"}  # websocket/af, sha1, current CSRF tokens.
  "faraday" {>= "0.6.1"}
  "faraday-lwt-unix"
  "ocaml" {>= "4.06.0"}  # Gluten.
  "result"  # http/af, websocket/af.

  # Testing, development.
  "alcotest" {with-test}  # TODO LATER Needs constraint.
  "bisect_ppx" {dev & >= "2.5.0"}  # --instrument-with.
]
