opam-version: "2.0"

synopsis: "Tidy, feature-complete Web framework"

license: "MIT"
homepage: "https://github.com/aantron/dream"
author: "Anton Bachin <antonbachin@yahoo.com>"

bug-reports: "https://github.com/aantron/dream/issues"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

dev-repo: "git+https://github.com/aantron/dream.git"

build: [
  ["dune" "build" "-p"
    "dream,gluten,gluten-lwt,gluten-lwt-unix,websocketaf,httpaf,httpaf-lwt,httpaf-lwt-unix,hpack,h2,h2-lwt,h2-lwt-unix"
    "-j" jobs]
]

# Extreme abuse.
install: [
  ["opam-installer" "--prefix" prefix "dream.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/gluten/gluten.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/gluten/gluten-lwt.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/gluten/gluten-lwt-unix.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/websocketaf/websocketaf.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/httpaf/httpaf.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/httpaf/httpaf-lwt.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/httpaf/httpaf-lwt-unix.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/h2/hpack.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/h2/h2.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/h2/h2-lwt.install"]
  ["opam-installer" "--prefix" prefix "src/vendor/h2/h2-lwt-unix.install"]
]
# TODO Set all these packages as conflicts.
# TODO Use dune install -p ...

depends: [
  "base-unix"
  "base64" {>= "3.1.0"}  # Base64.encode_string.
  "bigarray-compat"
  "caqti-lwt"
  "conf-libev"
  "cstruct"
  "dune" {>= "2.7.0"}  # --instrument-with.
  "fmt" {>= "0.8.7"}  # `Italic. This constrains Dream to OCaml >= 4.05.
  "graphql_parser"
  "graphql-lwt"  # Should be factored out; Menhir as recursive dependency.
  "hmap"
  "lwt"
  "lwt_ppx"
  "lwt_ssl"
  "logs" {>= "0.5.0"}
  "magic-mime"
  "mirage-crypto" {>= "0.8.1"}  # AES-256-GCM.
  "mirage-crypto-rng" {>= "0.8.0"}  # Signature of initialize.
  "multipart-form-data" {>= "0.3.0"}
  "ocaml" {>= "4.08.0"}
  "opam-installer" {build}
  "uri"
  "yojson"  # ...

  # Currently vendored.
  # "gluten"
  # "gluten-lwt-unix"
  # "httpaf"
  # "httpaf-lwt-unix"

  # Dependencies of vendored packages.
  "angstrom" {>= "0.14.0"}
  "bigstringaf" {>= "0.4.0"}
  "digestif" {>= "0.7"}  # websocket/af, sha1, current CSRF tokens.
  "faraday" {>= "0.6.1"}
  "faraday-lwt-unix"
  "ocaml" {>= "4.06.0"}  # Gluten.
  "psq"  # h2.
  "result"  # http/af, websocket/af.

  # Testing, development.
  "alcotest" {with-test}
  "bisect_ppx" {dev & >= "2.5.0"}  # --instrument-with.
  "ppx_expect" {with-test}
]

# TODO Tags, description.
