(library
 (public_name dream)
 (wrapped false)
 (libraries
  caqti-lwt
  dream.asset
  dream.cipher
  dream.graphql
  dream.http
  dream.middleware
  dream.pure
  dream.sql
  graphql-lwt
  logs
  lwt
  lwt.unix))

(rule
 (targets welcome_template.ml)
 (deps welcome_template.eml.ml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

