opam-version: "2.0"

depends: [
  "ocaml" {>= "4.08.0"}
  "dream"
  "dune" {>= "3.16.0"}
  "mlx"
  "html_of_jsx"
]

synopsis: "One of the Dream examples"
homepage: "https://github.com/aantron/dream"
bug-reports: "https://github.com/aantron/dream/issues"
author: "Anton Bachin <antonbachin@yahoo.com>"
license: "MIT"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
