opam-version: "2.0"

depends: [
  "caqti-driver-sqlite3"
  "dune" {>= "2.0.0"}
  "ocaml"
  "ppx_yojson_conv"
  "reason"
]

synopsis: "Dream playground"
homepage: "https://github.com/aantron/dream"
bug-reports: "https://github.com/aantron/dream/issues"
author: "Anton Bachin <antonbachin@yahoo.com>"
license: "MIT"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
