(library
 (public_name dream.asset)
 (name dream__asset)
 (libraries dream.pure)
 (instrumentation
  (backend bisect_ppx)))

(rule
 (targets dream__asset.ml)
 (deps
  (:css main.css)
  (:favicon favicon.ico))
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "let css = {|")
    (cat %{css})
    (echo "|}")
    (echo "let favicon = {|")
    (cat %{favicon})
    (echo "|}")))))
