(library
 (public_name dream.certificate)
 (name dream__certificate))

(rule
 (target dream__certificate.ml)
 (deps
  (:certificate localhost.crt)
  (:key localhost.key))
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let localhost_certificate = {ssl|")
    (cat %{certificate})
    (echo "|ssl}\n\n")
    (echo "let localhost_certificate_key = {key|")
    (cat %{key})
    (echo "|key}\n")
   ))))
