(library
 (public_name dream.http)
 (name dream__http)
 (libraries
  digestif
  dream.certificate
  dream.cipher
  dream-pure
  dream.server
  dream-httpaf
  dream-httpaf.dream-gluten
  dream-httpaf.dream-gluten-eio
  dream-httpaf.dream-h2
  dream-httpaf.dream-h2-lwt-unix
  dream-httpaf.dream-httpaf_
  dream-httpaf.dream-httpaf_-eio
  ssl
  dream-httpaf.dream-websocketaf
  eio_main
 )
 (instrumentation (backend bisect_ppx)))
