(library
 (public_name dream.http)
 (name dream__http)
 (libraries
  digestif
  dream.certificate
  dream.cipher
  dream-pure
  dream.server
  dream-httpaf
  dream-httpaf.dream-gluten
  dream-httpaf.dream-gluten-lwt-unix
  dream-httpaf.dream-h2
  dream-httpaf.dream-h2-lwt-unix
  dream-httpaf.dream-httpaf_
  dream-httpaf.dream-httpaf_-lwt-unix
  lwt
  lwt.unix
  lwt_ssl
  ssl
  dream-httpaf.dream-websocketaf
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
