(library
 (public_name dream.middleware)
 (name dream__middleware)
 (libraries
  digestif
  dream.cipher
  dream.pure
  multipart_form
  multipart_form.lwt
  mirage-clock
  ptime
  unstrctrd
  fmt
  fmt.tty
  logs
  lwt
  magic-mime
  uri
  yojson
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))

(rule
 (targets error_template.ml)
 (deps error_template.eml.ml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets tag.ml)
 (deps tag.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
