(library
 (public_name dream.middleware)
 (name dream__middleware)
 (modules catch content_length csrf echo error error_template flash_message
  form log lowercase_headers request_id router session site_prefix
  origin_referrer_check tag upload)
 (libraries
  digestif
  dream.cipher
  dream.pure
  fmt
  fmt.tty
  logs
  lwt
  magic-mime
  mirage-clock
  multipart_form
  multipart_form.lwt
  ptime
  unstrctrd
  uri
  yojson
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))

(library
 (public_name dream.middleware.static)
 (name dream__static)
 (modules static)
 (libraries
  digestif
  dream.pure
  lwt.unix
  magic-mime
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))

(rule
 (targets error_template.ml)
 (deps error_template.eml.ml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets tag.ml)
 (deps tag.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
