(cram
 (deps %{bin:hello} %{bin:middleware} %{bin:router} %{bin:counter}))

(env
 (_
  (env-vars
   ; --silent: Remove progress bar and error messages from retries
   ; --retry 5 --retry-connrefused: retry in case curl is run before the server is available
   (CURL "curl --silent --retry 2 --retry-connrefused"))
  (binaries
   ../../example/1-hello/hello.exe
   ../../example/2-middleware/middleware.exe
   ../../example/3-router/router.exe
   ../../example/4-counter/counter.exe)))
