opam-version: "2.0"

synopsis: "Dream playground runtime"
homepage: "https://github.com/aantron/dream"
bug-reports: "https://github.com/aantron/dream/issues"
author: "Anton Bachin <antonbachin@yahoo.com>"
license: "MIT"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "dream"
  "dune" {>= "2.0.0"}
  "ocaml"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
